--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "homepage": "https://github.com/fedecia/gmail-sender-oauth#readme",
   "dependencies": {
-    "gmail-api-sync": "^1.2.3"
+    "gmail-api-sync": "^1.2.3",
+    "googleapis": "^19.0.0"
   },
   "devDependencies": {
     "coveralls": "^2.13.0",
